2015-06-07  Gregory Soyez  <soyez@fastjet.fr>

	* MC_LHQG_EE.plot:
	rebinned directly from here

2015-06-06  Gregory Soyez  <soyez@fastjet.fr>

	* produce-Qdependence-data.py:         *** ADDED ***
	* produce-Rdependence-data.py:	       *** ADDED ***
	* produce-alphadependence-data.py:     *** ADDED ***
	added scrpiuts to produce the various dependence results we want to study

	* post-process.sh:
	revamped to match the workflow mentioned in the README
	STILL PRELIMINARY!!!

	* produce-separation-data.py:
	fixes some comments; limited to R=0.6

	* produce-separation-plots.py --> produce-separation-data.py:
	file renamed

	* README.md:
	updated the whole workflow after the meeting in Les Houches on June 6th.
	mentioned that hadron-level is the default
	added a description of what set of plots we want (based on the wiki)

	* MC_LHQG_EE.cc:
	switched to R=0.2, 0.4, 0.6, 0.8, 1.0

	* post-process.sh:
	added the machinery to do multiple energies; added the 800 GeV results

	* MC_LHQG_EE.plot:
	set the log thrust to -8

	* post-process.sh:
	specified explicitly the configuration file

	* produce-separation-plots.py:
	produce separate plots for each of the 3 R values

	* separation.plot:
	* post-process.sh:
	worked on plot cosmetics

	* README.md:
	replaced the request for a 500 GeV run by a 400 GeV one (keeps
	geometric progression);
	added some description of the latest "scripting" work

	* post-process.sh:
	fixed wrong names when processing Herwig results

	* produce-separation-plots.py:
	fixed a bug wit the output file

2015-06-06  Jesse Thaler  <jthaler@mit.edu>

	* compute-efficiencies.py
	Added correct (?) uncertainties for separation plots

2015-06-06  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	added summary plots

	* separation.plot:              *** ADDED ***
	added a file with plotting settings for the summary plots

	* produce-separation-plots.py:  *** ADDED ***
	* get-separation.sh:            *** ADDED ***